--- a/templates/character/search.html
+++ b/templates/character/search.html
@@ -5,9 +5,13 @@
     <h3 class="text-start">Characters</h3>
     <p hidden id="term">{{ term }}</p>
 </div>
-<div class="container-fluid w-75 border" id="characterList">
+<div class="container-fluid w-75 border mb-5" id="characterList">
 </div>
-<div class="loader" id="loader"></div>
+<div class="d-flex justify-content-center">
+    <div class="spinner-border" style="width: 4rem; height: 4rem;" role="status" id="spinner">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
 {% endblock %}
 
 {% block script %}
