--- a/templates/gear/gear_detail.html
+++ b/templates/gear/gear_detail.html
@@ -236,12 +236,12 @@
     </div>
 </div>
 <br>
-<form action="/gear/id/{{gearset.id}}/delete" method="POST">
+<form action="/gearset/id/{{gearset.id}}/delete" method="POST">
     <div class="container">
         <button class="btn btn-danger float-end" type="submit">Delete</button>
     </div>
 </form>
-<form action="/gear/id/{{gearset.id}}/edit" method="GET">
+<form action="/gearset/id/{{gearset.id}}/edit" method="GET">
     <div class="container">
         <button class="btn btn-primary float-end" type="submit">Edit</button>
     </div>
