--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,8 +4,7 @@
 
 {% block content %}
 
-<br><br><br><br>
-  <div class="row justify-content-md-center">
+  <div class="row justify-content-md-center mt-5">
     <div class="col-md-7 col-lg-5">
       <h2 class="join-message">Welcome back.</h2>
 
