--- a/templates/users/user_profile.html
+++ b/templates/users/user_profile.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<br><br><br><br>
-<div class="container">
+<div class="container mt-5">
     <div class="row text-center">
         <h3>{{ user.username }}</h3>
     </div>
