--- a/templates/users/user_profile_edit.html
+++ b/templates/users/user_profile_edit.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<br><br><br><br>
-<div class="row justify-content-md-center">
+<div class="row justify-content-md-center mt-5">
     <div class="col-md-7 col-lg-5">
       <form method="POST" id="user_form">
         <h2 class="join-message">Edit {{ g.user.name }}</h2>
